fixes position of notifications when sidenav collapsed

--- a/apps/courses/src/app/app.component.scss
+++ b/apps/courses/src/app/app.component.scss
@@ -128,7 +128,7 @@ ul.student-name {
 
 .popout-collapse {
   @include breakpoint(mobile) {
-    left: 125px !important;
+    left: 107px !important;
   }
 }
 
