--- a/apps/recent-activity/src/app/app.component.scss
+++ b/apps/recent-activity/src/app/app.component.scss
@@ -79,7 +79,7 @@
 
 .popout-collapse {
   @include breakpoint(mobile) {
-    left: 125px !important;
+    left: 107px !important;
   }
   @include breakpoint(tablet) {
     width: 434px;
